fix: css and text

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <span class="icon la la-umbrella"></span>
                 </div>
                 <h3 class="mb-3">DApp</h3>
-                <p>Safety & Protect Private.</p>
+                <p>Safety & Protect Privacy.</p>
               </div>
             </div>
           </div>
