fix: text color and text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="row">
                 <div class="col-lg-7 text-center text-lg-left">
                   <h1 data-aos="fade-right">Just for fun</h1>
-                  <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Open sources, Safety, Decentralized,
+                  <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Open source, Safety, Decentralized,
                     DApp.Simple, found value anywhere.</p>
                   <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#"
                       class="btn btn-outline-white">Get started</a></p>
