--- a/index.html
+++ b/index.html
@@ -159,19 +159,16 @@
             <div class="col-md-4 mr-auto text-center text-md-left mb-5 mb-md-0">
               <h2>Get App Start</h2>
             </div>
-            <div class="col-sm-8 text-center text-md-right">
-              <p>
+            <div class="col-md-8 text-center">
+              <div>
                 <a href="https://testflight.apple.com/join/uWaNXNtj" class="btn mt-3"><span class="icofont-brand-apple mr-3"></span>App Testflight</a>
                 <!-- <a href="#" class="btn mt-3"><span class="icofont-ui-play mr-3"></span>Google play</a> -->
                 <a href="https://github.com/kilmas/QHWallet/releases" class="btn mt-3"><span class="icofont-downloaded mr-3"></span>Android Apk</a>
-              </p>
+              </div>
             </div>
-            <!-- <div class="col-md-8 d-block d-md-none d-none d-md-block d-lg-block d-xl-block text-center text-md-right">
-              <p>
-                <a href="https://testflight.apple.com/join/uWaNXNtj" class="mt-3"><img src="ios.png"/></a>
-                <a href="https://github.com/kilmas/QHWallet/releases" class="mt-3"><img src="android.png"/></span></a>
-              </p>
-            </div> -->
+          </div>
+          <div class="float-right">
+            <img style="height: 85px; width: 85px; margin-top: 5px;" src="app.png" class="d-block d-md-none d-none d-md-block d-lg-block d-xl-block"/>
           </div>
         </div>
       </div>
