fix: app qrcode

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
           </div>
           <div class="float-right">
-            <img style="height: 85px; width: 85px; margin-top: 5px;" src="app.png" class="d-block d-md-none d-none d-md-block d-lg-block d-xl-block"/>
+            <img style="height: 85px; width: 85px; margin-top: 5px;" src="app1.png" class="d-block d-md-none d-none d-md-block d-lg-block d-xl-block"/>
           </div>
         </div>
       </div>
