fix: android link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <div>
                 <a href="https://testflight.apple.com/join/uWaNXNtj" class="btn mt-3"><span class="icofont-brand-apple mr-3"></span>App Testflight</a>
                 <!-- <a href="#" class="btn mt-3"><span class="icofont-ui-play mr-3"></span>Google play</a> -->
-                <a href="https://github.com/kilmas/QHWallet/releases" class="btn mt-3"><span class="icofont-downloaded mr-3"></span>Android Apk</a>
+                <a href="https://dapp.bitewd.com/app-universal-release.apk" class="btn mt-3"><span class="icofont-downloaded mr-3"></span>Android Apk</a>
               </div>
             </div>
           </div>
