--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="col-lg-7 text-center text-lg-left">
                   <h1 data-aos="fade-right">Just for fun</h1>
                   <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Open source, Safety, Decentralized,
-                    DApp.Simple, found value anywhere.</p>
+                    DApp.Simple, find value anywhere.</p>
                   <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#"
                       class="btn btn-outline-white">Get started</a></p>
                 </div>
@@ -116,7 +116,7 @@
 
           <div class="row justify-content-center text-center mb-5">
             <div class="col-md-5" data-aos="fade-up">
-              <h2 class="section-heading">Found value anywhere</h2>
+              <h2 class="section-heading">Find value anywhere</h2>
             </div>
           </div>
 
@@ -136,7 +136,7 @@
                   <span class="icon la la-toggle-off"></span>
                 </div>
                 <h3 class="mb-3">Defi</h3>
-                <p>Decentralized.</p>
+                <p>Decentralized</p>
               </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
@@ -145,7 +145,7 @@
                   <span class="icon la la-umbrella"></span>
                 </div>
                 <h3 class="mb-3">DApp</h3>
-                <p>Safety & Protect Privacy.</p>
+                <p>Safe & Protects Privacy.</p>
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 mr-auto text-center text-md-left mb-5 mb-md-0">
-              <h2>Get App Start</h2>
+              <h2>Download the App</h2>
             </div>
             <div class="col-md-8 text-center">
               <div>
@@ -181,7 +181,7 @@
           <div class="col-md-7">
             <p class="copyright">&copy; Copyright BitVate. All Rights Reserved</p>
             <div class="credits">
-              More App <a href="http://qingah.com/" target="_blank" title="比特维度">比特维度</a>
+              More Apps <a href="http://qingah.com/" target="_blank" title="比特维度">比特维度</a>
             </div>
           </div>
         </div>
